--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <!-- inizio header -->
     <header>
 
+        <img src="img/logo.svg" alt="The booleaner" class="immagine">
+
     </header>
     <!-- fine header -->
     
-    <!-- titolo -->
-
     <!-- inizio main -->
     <main>
+        
+    <!-- titolo -->
 
     </main>
     <!-- fine main -->
