add: titolo e primo lorem

--- a/index.html
+++ b/index.html
@@ -19,8 +19,32 @@
     
     <!-- inizio main -->
     <main>
-        
+
     <!-- titolo -->
+    <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+
+    <p class="gray">
+        Scritto da <span class="light-blue">The Booleaner</span>
+        <br>
+        il 10/10/2020
+    </p>
+
+    <img src="tim-1.jpg" alt="Tim Berners-Lee">
+    <img src="tim-2.jpg" alt="Tim Berners Internet">
+
+    <!-- info foto -->
+    <p>
+        1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen
+        <br>
+        2nd Photo: Wikimedia, by Paul Clarke
+    </p>
+    <!-- fine info -->
+
+    <!-- sezione primo testo  -->
+    <section>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <span class="marked-yellow">Minus ipsam laudantium accusantium?</span> Enim, quibusdam consequatur. Natus molestiae, animi quasi sequi deleniti possimus provident accusantium, obcaecati blanditiis, vitae consectetur dignissimos recusandae.</p>
+    </section>
+    <!-- fine prima sezione -->
 
     </main>
     <!-- fine main -->
