--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
     </section>
     <!-- fine prima sezione -->
 
+    <!-- inizio lista -->
+
+    <ul>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+    </ul>
+
+    <!-- fine lista -->
+
     </main>
     <!-- fine main -->
 
