--- a/index.html
+++ b/index.html
@@ -56,6 +56,47 @@
 
     <!-- fine lista -->
 
+    <!-- inizio tabella -->
+
+    <table>
+
+        <thead>
+
+            <tr>
+                <th>Lorem ipsum dolor</th>
+                <th>Lorem ipsum dolor</th>
+                <th>Lorem ipsum dolor</th>
+            </tr>
+        
+        </thead>
+
+        <tbody>
+            <tr class="back-light-blue">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro autem, fugiat sed delectus a earum eligendi fuga itaque. Illum voluptatibus laudantium pariatur sint officiis omnis quibusdam esse assumenda tempore quisquam?
+                </td>
+            </tr>
+
+            <tr>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro autem, fugiat sed delectus a earum eligendi fuga itaque. Illum voluptatibus laudantium pariatur sint officiis omnis quibusdam esse assumenda tempore quisquam?
+                </td>
+            </tr>
+
+            <tr class="back-light-blue">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro autem, fugiat sed delectus a earum eligendi fuga itaque. Illum voluptatibus laudantium pariatur sint officiis omnis quibusdam esse assumenda tempore quisquam?
+                </td>
+            </tr>
+
+        </tbody>
+    </table>
+
+    <!-- fine tabella -->
+
     </main>
     <!-- fine main -->
 
