add: secondo lorem

--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@
 
     <!-- fine tabella -->
 
+    <!-- sezione secondo testo  -->
+    <section>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <span class="marked-yellow">Minus ipsam laudantium accusantium?</span> Enim, quibusdam consequatur. Natus molestiae, animi quasi sequi deleniti possimus provident accusantium, obcaecati blanditiis, vitae consectetur dignissimos recusandae.</p>
+    </section>
+    <!-- fine seconda sezione -->
+
     </main>
     <!-- fine main -->
 
