--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <table>
 
-        <thead>
+        <thead class="white">
 
             <tr>
                 <th>Lorem ipsum dolor</th>
@@ -108,6 +108,16 @@
 
     <!-- inizio footer -->
     <footer>
+
+        <!-- prima immagine -->
+        <div class="img-foot1 white">
+            Lorem ipsum dolor
+        </div>
+
+        <!-- seconda immagine -->
+        <div class="img-foot2 white">
+            Lorem ipsum dolor
+        </div>
 
     </footer>
     <!-- fine footer -->
