--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
         il 10/10/2020
     </p>
 
-    <img src="tim-1.jpg" alt="Tim Berners-Lee">
-    <img src="tim-2.jpg" alt="Tim Berners Internet">
+    <div>
+        <img src="tim-1.jpg" alt="Tim Berners-Lee">
+        <img src="tim-2.jpg" alt="Tim Berners Internet">
+    </div>
 
     <!-- info foto -->
     <p>
@@ -109,10 +111,14 @@
     <!-- inizio footer -->
     <footer>
 
+        <!-- titolo -->
+        <h3 class="gray">Potrebbero interessarti</h3>
         <!-- prima immagine -->
         <div class="img-foot1 white">
             Lorem ipsum dolor
         </div>
+
+        <br>
 
         <!-- seconda immagine -->
         <div class="img-foot2 white">
